# eudr_dmi

./: .gitignore  ADOPTION_LOG.md  README.md  demo_mcp_servers.py  pyproject.toml  requirements-dev.txt  requirements-methods.txt
.github/: CODEOWNERS  pull_request_template.md
data_db/: dataset_catalogue_auto.csv  dataset_catalogue_with_families.csv  dataset_families_summary.csv  geodata_catalogue.duckdb
docs/: 00_scope_and_assurance.md  10_policy_to_evidence_spine.md  20_evidence_bundle_spec.md  30_runbook.md  60_risk_register.md  70_change_control.md  INDEX.md  README.md  glossary.md  overview.md  regulation_links.html  regulation_mirror_manual_checklist.md  regulation_sources.md  testing.md
infra/: CHANGELOG.md  DEPLOYMENT.md  VERIFICATION_SUMMARY.md  docker-compose.yml  setup_postgres.sh  setup_postgres_users.sql  verify_infra.sh
schemas/: definition_comparison.schema.json  dependencies_mirror_metadata.schema.json  dependencies_sources.schema.json  dependency_run_metadata.schema.json
scripts/: build_docs_site.sh  build_site_bundle.sh  check_method_deps.py  export_site_bundle.sh  fetch_dependency_definitions.py  fetch_eurlex_eudr_32023R1115.py  quality_deps.sh  run_aoi_report_local.sh  validate_evidence_bundle.py  watch_dependency_definitions.py  watch_eurlex_eudr_32023R1115.py
tests/: __init__.py  fixtures.py  test_build_dao_indexes.py  test_definition_comparison_artifacts.py  test_demo_scripts_help_smoke.py  test_dependencies_acquire_and_hash_determinism.py  test_dependencies_sources_schema.py  test_docs_site_build.py  test_fetch_eurlex_eudr_32023R1115.py  (+13 more)
(+127 files in other folders)
